--- a/LicenseReal/web/calendar-management.html
+++ b/LicenseReal/web/calendar-management.html
@@ -29,7 +29,6 @@
     <link rel="stylesheet" href="./assets/vendor/fonts/boxicons.css" />
 
     <!-- Core CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"/>
     <link
       rel="stylesheet"
       href="./assets/vendor/css/core.css"
@@ -57,14 +56,98 @@
     <script src="./assets/js/config.js"></script>
 
     <!-- Calender  -->
-    <link rel="stylesheet" href="./assets/css/calendar-management-style.css" />
+    <link rel="stylesheet" href="../web/assets/css/calendar-management-style.css" />
     <!-- Calender -->
   </head>
   <body>
     <!-- Layout wrapper -->
     <div class="layout-wrapper layout-content-navbar">
       <div class="layout-container">
-        <c:import url="menu.jsp"/>
+        <!-- Menu -->
+        <aside
+          id="layout-menu"
+          class="layout-menu menu-vertical menu bg-menu-theme"
+        >
+          <div class="app-brand demo">
+            <a href="index.html" class="app-brand-link">
+              <span class="app-brand-logo demo"> </span>
+              <span class="app-brand-text demo menu-text fw-bold ms-2"
+                >LOGO</span
+              >
+            </a>
+
+            <a
+              href="javascript:void(0);"
+              class="layout menu-link text-large ms-auto d-block d-xl-none"
+            >
+              <i class="bx bx-chevron-left bx-sm align-middle"></i>
+            </a>
+          </div>
+
+          <div class="menu-inner-shadow"></div>
+
+          <ul class="menu-inner py-1">
+            <!-- Dashboards -->
+            <li class="menu-item">
+              <a href="./index.html" class="menu-link">
+                <i class="menu-icon tf-icons bx bx-home-circle"></i>
+                <div data-i18n="Dashboards">Thống kê</div>
+              </a>
+            </li>
+
+            <!-- Layouts -->
+            <li class="menu-item">
+              <a href="./question-management.html" class="menu-link">
+                <i class="menu-icon tf-icons bx bx-layout"></i>
+                <div data-i18n="Layouts">Quản lí câu hỏi</div>
+              </a>
+            </li>
+
+            <li class="menu-item">
+              <a href="./user-management.html" class="menu-link">
+                <i class="menu-icon tf-icons bx bx-layout"></i>
+                <div data-i18n="Layouts">Quản lí người dùng</div>
+              </a>
+            </li>
+
+            <li class="menu-header small text-uppercase">
+              <span class="menu-header-text">Công cụ &amp; trang</span>
+            </li>
+
+            <li class="menu-item active">
+              <a href="./calendar-management.html" class="menu-link">
+                <i class="menu-icon tf-icons bx bx-calendar"></i>
+                <div data-i18n="Layouts">Lịch học</div>
+              </a>
+            </li>
+
+            <li class="menu-item">
+              <a href="#" class="menu-link">
+                <i class="menu-icon tf-icons bx bx-list-ul"></i>
+                <div data-i18n="Layouts">Danh sách đề thi</div>
+              </a>
+            </li>
+
+            <li class="menu-item">
+              <a href="#" class="menu-link">
+                <i class="menu-icon tf-icons bx bx-history"></i>
+                <div data-i18n="Layouts">Lịch sử giao dịch</div>
+              </a>
+            </li>
+
+            <li class="menu-header small text-uppercase">
+              <span class="menu-header-text">Tài khoản &amp; Người dùng</span>
+            </li>
+
+            <li class="menu-item">
+              <a href="#" class="menu-link">
+                <i class="menu-icon tf-icons bx bx-log-out"></i>
+                <div data-i18n="Layouts">Đăng xuất</div>
+              </a>
+            </li>
+          </ul>
+        </aside>
+        <!-- / Menu -->
         <!-- Layout container -->
         <div class="layout-page">
           <!-- Content wrapper -->
@@ -96,8 +179,8 @@
                     <input
                       type="text"
                       class="form-control border-0 shadow-none ps-1 ps-sm-2"
-                      placeholder="Tìm kiếm."
-                      aria-label="Tìm kiếm."
+                      placeholder="Tìm kiếm.."
+                      aria-label="Tìm kiếm.."
                     />
                   </div>
                 </div>
